[gd_scene load_steps=70 format=3 uid="uid://rl24q6d8ab83"]

[ext_resource type="Texture2D" uid="uid://ckbp104lqvxcw" path="res://assets/8k_stars_milky_way.jpg" id="1_1ihek"]
[ext_resource type="Script" uid="uid://cdg76nlqjlxo8" path="res://camera_3d.gd" id="2_cafxb"]
[ext_resource type="Script" uid="uid://hldmo63xy0fh" path="res://ui_planet_button.gd" id="3_jhjvm"]
[ext_resource type="Script" uid="uid://big3kbbl8xv06" path="res://timer_script.gd" id="4_ibxys"]
[ext_resource type="Script" uid="uid://byhkvxynrg788" path="res://planets/change_time.gd" id="5_67dfk"]
[ext_resource type="Script" uid="uid://bnqsndvsudyjg" path="res://button scripts/slowfastbuttons.gd" id="5_kgxdp"]
[ext_resource type="Script" uid="uid://cjtebbrqlyjol" path="res://planets/start_time_input.gd" id="7_cjff7"]
[ext_resource type="PackedScene" uid="uid://tspk0tagw5dm" path="res://planets/sun.tscn" id="7_wftqc"]
[ext_resource type="Script" uid="uid://cb5ulyd6w8ius" path="res://planets/end_time_input.gd" id="8_xhwas"]
[ext_resource type="Script" uid="uid://dat5y246a2s7d" path="res://orbits/earth_orbit.gd" id="8_yhx7r"]
[ext_resource type="PackedScene" uid="uid://tu7m01jtcekk" path="res://planets/earth.tscn" id="9_iodg4"]
[ext_resource type="Script" uid="uid://dhbxd1qdgyfao" path="res://orbits/earth_moonO.gd" id="10_3rbkj"]
[ext_resource type="PackedScene" uid="uid://cwy75yc77u8n4" path="res://planets/earth_moon.tscn" id="11_8avvp"]
[ext_resource type="Script" uid="uid://dfs3h4rb84n3l" path="res://orbits/venus_orbit.gd" id="12_5m0ew"]
[ext_resource type="Script" uid="uid://ejuvhnit37h2" path="res://planets/ea_orb_line.gd" id="12_8avvp"]
[ext_resource type="Script" uid="uid://48lrvbqh14pm" path="res://planets/eam_orb_line.gd" id="12_cjff7"]
[ext_resource type="PackedScene" uid="uid://cit721c0gtcea" path="res://planets/venus.tscn" id="13_cjff7"]
[ext_resource type="Script" uid="uid://berodv21tqgot" path="res://orbits/mercury_orbit.gd" id="14_xhwas"]
[ext_resource type="Script" uid="uid://bph11a4xtskfm" path="res://planets/ve_orb_line.gd" id="15_5m0ew"]
[ext_resource type="PackedScene" uid="uid://ijf1kly4ex0r" path="res://planets/mercury.tscn" id="15_67dfk"]
[ext_resource type="Script" uid="uid://cfvxgoi35mc2p" path="res://planets/me_orb_line.gd" id="16_iodg4"]
[ext_resource type="Script" uid="uid://c46j3gtixkmrx" path="res://orbits/mars_orbit.gd" id="16_vomel"]
[ext_resource type="PackedScene" uid="uid://gq1jii67eufs" path="res://planets/mars.tscn" id="17_p1omw"]
[ext_resource type="Script" uid="uid://g4ralivnvkkm" path="res://mars.gd" id="18_g7h33"]
[ext_resource type="PackedScene" uid="uid://7cu4rq6ekttr" path="res://planets/phobos.tscn" id="19_y1g2g"]
[ext_resource type="PackedScene" uid="uid://dh80prevuwpmd" path="res://planets/deimos.tscn" id="20_17l4g"]
[ext_resource type="Script" uid="uid://d0fws8f4tc68h" path="res://planets/ma_orb_line.gd" id="21_168cx"]
[ext_resource type="Script" uid="uid://caodo7btx5guw" path="res://orbits/jupiter_orbit.gd" id="21_hcqao"]
[ext_resource type="Script" uid="uid://734s3tj0gel8" path="res://planets/ph_orb_line.gd" id="21_wftqc"]
[ext_resource type="PackedScene" uid="uid://b2vcl2p14ny47" path="res://planets/jupiter.tscn" id="22_mw0qc"]
[ext_resource type="Script" uid="uid://xeoexe7t75sd" path="res://planets/de_orb_line.gd" id="22_yhx7r"]
[ext_resource type="Script" uid="uid://dqdyp225wxd8y" path="res://planets/ju_orb_line.gd" id="23_kgxdp"]
[ext_resource type="Script" uid="uid://bngvq0plhny5d" path="res://orbits/saturn_orbit.gd" id="23_ykhyk"]
[ext_resource type="PackedScene" uid="uid://dsbhfk6f8o7qb" path="res://planets/saturnFINAL.tscn" id="24_drbii"]
[ext_resource type="Script" uid="uid://dfs60ngknn2he" path="res://orbits/uranus_orbit.gd" id="25_02biu"]
[ext_resource type="Script" uid="uid://0xop0kea6fch" path="res://planets/sa_orb_line.gd" id="25_ibxys"]
[ext_resource type="PackedScene" uid="uid://bmbewo8nx4lmc" path="res://planets/uranus.tscn" id="26_uivhv"]
[ext_resource type="Script" uid="uid://cosn8jqe1awkn" path="res://planets/ur_orb_line.gd" id="27_jhjvm"]
[ext_resource type="Script" uid="uid://cmeiddr5xlw3a" path="res://orbits/neptune_orbit.gd" id="27_lqow6"]
[ext_resource type="PackedScene" uid="uid://nnexwfyo3n53" path="res://planets/neptune.tscn" id="28_weik8"]
[ext_resource type="Script" uid="uid://c6btgjvckvcu2" path="res://planets/ne_orb_line.gd" id="29_cafxb"]
[ext_resource type="Script" uid="uid://dbwsrjbb15ie5" path="res://2dUI/2dOrbits.gd" id="43_qvv86"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_81phd"]
panorama = ExtResource("1_1ihek")

[sub_resource type="Sky" id="Sky_qtpbo"]
sky_material = SubResource("PanoramaSkyMaterial_81phd")

[sub_resource type="Environment" id="Environment_rxlph"]
background_mode = 2
sky = SubResource("Sky_qtpbo")
glow_bloom = 0.2
glow_blend_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_35bkm"]

[sub_resource type="ViewportTexture" id="ViewportTexture_n7sbm"]
viewport_path = NodePath("Sun/SU_tag/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_c8jnm"]
viewport_path = NodePath("Earth_O/Earth/EA_tag/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_gvyvm"]
viewport_path = NodePath("Earth_O/Earth/Earth Moon/EAM_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_67dfk"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_cjff7"]

[sub_resource type="ViewportTexture" id="ViewportTexture_4fo3t"]
viewport_path = NodePath("Venus_O/Venus/VE_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_xhwas"]

[sub_resource type="ViewportTexture" id="ViewportTexture_4v84m"]
viewport_path = NodePath("Mercury_O/Mercury/ME_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_3rbkj"]

[sub_resource type="ViewportTexture" id="ViewportTexture_jhjvm"]
viewport_path = NodePath("Mars_O/Mars/MA_tag/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_1ihek"]
viewport_path = NodePath("Mars_O/Mars/phobos/PH_tag/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_cafxb"]
viewport_path = NodePath("Mars_O/Mars/deimos/DE_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_yhx7r"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_iodg4"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_wftqc"]

[sub_resource type="ViewportTexture" id="ViewportTexture_55yc6"]
viewport_path = NodePath("Jupiter_O/Jupiter/JU_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_168cx"]

[sub_resource type="ViewportTexture" id="ViewportTexture_20dnj"]
viewport_path = NodePath("Saturn_O/Saturn/SA_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_kgxdp"]

[sub_resource type="ViewportTexture" id="ViewportTexture_35bkm"]
viewport_path = NodePath("Uranus_O/Uranus/UR_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_ibxys"]

[sub_resource type="ViewportTexture" id="ViewportTexture_4xipw"]
viewport_path = NodePath("Neptune_O/Neptune/NE_tag/SubViewport")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_jhjvm"]

[node name="Space" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.01166, -2.52292, -10.5008)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_energy = 50000.0
light_size = 865.38
light_specular = 2.024
omni_range = 1e+09
omni_attenuation = 0.89
omni_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rxlph")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.778e+06, 0, 7.378)
current = true
far = 100000.0
script = ExtResource("2_cafxb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -6.0
offset_right = 1152.0
offset_bottom = 642.0

[node name="Big panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -300.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Hi
"

[node name="Main Box" type="VBoxContainer" parent="Control/Big panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.41
anchor_bottom = 0.268
offset_right = 118.0
offset_bottom = 218.6

[node name="BoxContainer" type="BoxContainer" parent="Control/Big panel/Main Box"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Big panel/Main Box/BoxContainer"]
layout_mode = 2
text = " Current Planet:"

[node name="Label2" type="Label" parent="Control/Big panel/Main Box/BoxContainer"]
layout_mode = 2
script = ExtResource("3_jhjvm")

[node name="Time" type="BoxContainer" parent="Control/Big panel/Main Box"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Big panel/Main Box/Time"]
layout_mode = 2
text = "Date:"
label_settings = SubResource("LabelSettings_35bkm")

[node name="Label2" type="Label" parent="Control/Big panel/Main Box/Time"]
layout_mode = 2
text = "1/1/2025 00:00"
label_settings = SubResource("LabelSettings_35bkm")
script = ExtResource("4_ibxys")

[node name="ChangeTime" type="LineEdit" parent="Control/Big panel/Main Box"]
layout_mode = 2
script = ExtResource("5_67dfk")

[node name="Time Controls" type="HBoxContainer" parent="Control/Big panel/Main Box"]
layout_mode = 2
script = ExtResource("5_kgxdp")

[node name="SlowerButton" type="Button" parent="Control/Big panel/Main Box/Time Controls"]
layout_mode = 2
text = "Slower"

[node name="SpeedLabel" type="Label" parent="Control/Big panel/Main Box/Time Controls"]
layout_mode = 2

[node name="FasterButton" type="Button" parent="Control/Big panel/Main Box/Time Controls"]
layout_mode = 2
text = "Faster"

[node name="StartTimeInput" type="LineEdit" parent="Control/Big panel/Main Box"]
layout_mode = 2
text = "MM/DD/YYYY HH:MM"
script = ExtResource("7_cjff7")

[node name="EndTimeInput" type="LineEdit" parent="Control/Big panel/Main Box"]
layout_mode = 2
text = "MM/DD/YYYY HH:MM"
script = ExtResource("8_xhwas")

[node name="ScrollContainer" type="VBoxContainer" parent="Control/Big panel/Main Box"]
layout_mode = 2

[node name="StartPlanet" type="OptionButton" parent="Control/Big panel/Main Box/ScrollContainer"]
layout_mode = 2
item_count = 8
popup/item_0/text = "Mercury"
popup/item_0/id = 1
popup/item_1/text = "Venus"
popup/item_1/id = 2
popup/item_2/text = "Earth"
popup/item_2/id = 3
popup/item_3/text = "Mars"
popup/item_3/id = 4
popup/item_4/text = "Jupiter"
popup/item_4/id = 5
popup/item_5/text = "Saturn"
popup/item_5/id = 6
popup/item_6/text = "Uranus"
popup/item_6/id = 7
popup/item_7/text = "Neptune"
popup/item_7/id = 8

[node name="EndPlanet" type="OptionButton" parent="Control/Big panel/Main Box/ScrollContainer"]
layout_mode = 2
item_count = 8
popup/item_0/text = "Mercury"
popup/item_0/id = 1
popup/item_1/text = "Venus"
popup/item_1/id = 2
popup/item_2/text = "Earth"
popup/item_2/id = 3
popup/item_3/text = "Mars"
popup/item_3/id = 4
popup/item_4/text = "Jupiter"
popup/item_4/id = 5
popup/item_5/text = "Saturn"
popup/item_5/id = 6
popup/item_6/text = "Uranus"
popup/item_6/id = 7
popup/item_7/text = "Neptune"
popup/item_7/id = 8

[node name="Sun" parent="." instance=ExtResource("7_wftqc")]

[node name="SU_tag" type="Node3D" parent="Sun"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 5.11811, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Sun/SU_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Sun/SU_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Sol"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Sun/SU_tag"]
transform = Transform3D(175, 0, 0, 0, 175, 0, 0, 0, 175, 0, 500, 0)
billboard = 1
texture = SubResource("ViewportTexture_n7sbm")

[node name="Earth_O" type="Node3D" parent="."]
script = ExtResource("8_yhx7r")

[node name="Earth" parent="Earth_O" instance=ExtResource("9_iodg4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 94471, 0, 0)
script = ExtResource("10_3rbkj")

[node name="EA_tag" type="Node3D" parent="Earth_O/Earth"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 5.11811, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Earth_O/Earth/EA_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Earth_O/Earth/EA_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Earth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Earth_O/Earth/EA_tag"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_c8jnm")

[node name="Earth Moon" parent="Earth_O/Earth" instance=ExtResource("11_8avvp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 238.855, 0, 0)

[node name="EAM_tag" type="Node3D" parent="Earth_O/Earth/Earth Moon"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 5.11811, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Earth_O/Earth/Earth Moon/EAM_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Earth_O/Earth/Earth Moon/EAM_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Luna"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Earth_O/Earth/Earth Moon/EAM_tag"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_gvyvm")

[node name="EAMOrbLine" type="MeshInstance3D" parent="Earth_O/Earth"]
mesh = SubResource("ImmediateMesh_67dfk")
script = ExtResource("12_cjff7")

[node name="EAOrbLine" type="MeshInstance3D" parent="Earth_O"]
mesh = SubResource("ImmediateMesh_cjff7")
script = ExtResource("12_8avvp")

[node name="Venus_O" type="Node3D" parent="."]
script = ExtResource("12_5m0ew")

[node name="Venus" parent="Venus_O" instance=ExtResource("13_cjff7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 67676, 0, 0)

[node name="VE_tag" type="Node3D" parent="Venus_O/Venus"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 5.11811, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Venus_O/Venus/VE_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Venus_O/Venus/VE_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Venus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Venus_O/Venus/VE_tag"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_4fo3t")

[node name="VEOrbLine" type="MeshInstance3D" parent="Venus_O"]
mesh = SubResource("ImmediateMesh_xhwas")
script = ExtResource("15_5m0ew")

[node name="Mercury_O" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0038476, 0, 0)
script = ExtResource("14_xhwas")

[node name="Mercury" parent="Mercury_O" instance=ExtResource("15_67dfk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37231, 0, 0)

[node name="ME_tag" type="Node3D" parent="Mercury_O/Mercury"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 3.16611, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Mercury_O/Mercury/ME_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Mercury_O/Mercury/ME_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Mercury"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Mercury_O/Mercury/ME_tag"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_4v84m")

[node name="MEOrbLine" type="MeshInstance3D" parent="Mercury_O"]
mesh = SubResource("ImmediateMesh_3rbkj")
script = ExtResource("16_iodg4")

[node name="Mars_O" type="Node3D" parent="."]
script = ExtResource("16_vomel")

[node name="Mars" parent="Mars_O" instance=ExtResource("17_p1omw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 141600, 0, 0)
script = ExtResource("18_g7h33")

[node name="MA_tag" type="Node3D" parent="Mars_O/Mars"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0, 5.118, 0)

[node name="SubViewport" type="SubViewport" parent="Mars_O/Mars/MA_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Mars_O/Mars/MA_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Mars"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Mars_O/Mars/MA_tag"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_jhjvm")

[node name="phobos" parent="Mars_O/Mars" instance=ExtResource("19_y1g2g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.826, 0, 0)

[node name="PH_tag" type="Node3D" parent="Mars_O/Mars/phobos"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0, 0.5, 0)

[node name="SubViewport" type="SubViewport" parent="Mars_O/Mars/phobos/PH_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Mars_O/Mars/phobos/PH_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Phobos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Mars_O/Mars/phobos/PH_tag"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_1ihek")

[node name="deimos" parent="Mars_O/Mars" instance=ExtResource("20_17l4g")]
transform = Transform3D(1, 0, 0, 0, 0.967709, -0.252069, 0, 0.252069, 0.967709, 14.58, 0, 0)

[node name="DE_tag" type="Node3D" parent="Mars_O/Mars/deimos"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0, 0.5, 0)

[node name="SubViewport" type="SubViewport" parent="Mars_O/Mars/deimos/DE_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Mars_O/Mars/deimos/DE_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Deimos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Mars_O/Mars/deimos/DE_tag"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_cafxb")

[node name="PHOrbLine" type="MeshInstance3D" parent="Mars_O/Mars"]
mesh = SubResource("ImmediateMesh_yhx7r")
script = ExtResource("21_wftqc")

[node name="DEOrbLine" type="MeshInstance3D" parent="Mars_O/Mars"]
mesh = SubResource("ImmediateMesh_iodg4")
script = ExtResource("22_yhx7r")

[node name="MAOrbLine" type="MeshInstance3D" parent="Mars_O"]
mesh = SubResource("ImmediateMesh_wftqc")
script = ExtResource("21_168cx")

[node name="Jupiter_O" type="Node3D" parent="."]
script = ExtResource("21_hcqao")

[node name="Jupiter" parent="Jupiter_O" instance=ExtResource("22_mw0qc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 477760, 0, 0)

[node name="JU_tag" type="Node3D" parent="Jupiter_O/Jupiter"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 5.11811, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Jupiter_O/Jupiter/JU_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Jupiter_O/Jupiter/JU_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Jupiter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Jupiter_O/Jupiter/JU_tag"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 50, 0)
billboard = 1
texture = SubResource("ViewportTexture_55yc6")

[node name="JUOrbLine" type="MeshInstance3D" parent="Jupiter_O"]
mesh = SubResource("ImmediateMesh_168cx")
script = ExtResource("23_kgxdp")

[node name="Saturn_O" type="Node3D" parent="."]
script = ExtResource("23_ykhyk")

[node name="Saturn" parent="Saturn_O" instance=ExtResource("24_drbii")]
transform = Transform3D(0.085, 0, 0, 0, 0.085, 0, 0, 0, 0.085, 889910, 0, 0)

[node name="SA_tag" type="Node3D" parent="Saturn_O/Saturn"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.0312481, 5.11811, 0.0109634)

[node name="SubViewport" type="SubViewport" parent="Saturn_O/Saturn/SA_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Saturn_O/Saturn/SA_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Saturn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SA_S3D" type="Sprite3D" parent="Saturn_O/Saturn/SA_tag"]
transform = Transform3D(600, 0, 0, 0, 600, 0, 0, 0, 600, 0, 600, 0)
billboard = 1
texture = SubResource("ViewportTexture_20dnj")

[node name="SAOrbLine" type="MeshInstance3D" parent="Saturn_O"]
mesh = SubResource("ImmediateMesh_kgxdp")
script = ExtResource("25_ibxys")

[node name="Uranus_O" type="Node3D" parent="."]
script = ExtResource("25_02biu")

[node name="Uranus" parent="Uranus_O" instance=ExtResource("26_uivhv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8141e+06, 0, 0)

[node name="UR_tag" type="Node3D" parent="Uranus_O/Uranus"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 5.11811, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Uranus_O/Uranus/UR_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Uranus_O/Uranus/UR_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Uranus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Uranus_O/Uranus/UR_tag"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 20, 0)
billboard = 1
texture = SubResource("ViewportTexture_35bkm")

[node name="UROrbLine" type="MeshInstance3D" parent="Uranus_O"]
mesh = SubResource("ImmediateMesh_ibxys")
script = ExtResource("27_jhjvm")

[node name="Neptune_O" type="Node3D" parent="."]
script = ExtResource("27_lqow6")

[node name="Neptune" parent="Neptune_O" instance=ExtResource("28_weik8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7781e+06, 0, 0)

[node name="NE_tag" type="Node3D" parent="Neptune_O/Neptune"]
transform = Transform3D(-0.989581, 0, -0.143976, 0, 1, 0, 0.143976, 0, -0.989581, 0.03125, 5.11811, 0.0109625)

[node name="SubViewport" type="SubViewport" parent="Neptune_O/Neptune/NE_tag"]
size = Vector2i(300, 25)

[node name="Label" type="Label" parent="Neptune_O/Neptune/NE_tag/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Neptune"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="Neptune_O/Neptune/NE_tag"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 20, 0)
billboard = 1
texture = SubResource("ViewportTexture_4xipw")

[node name="NEOrbLine" type="MeshInstance3D" parent="Neptune_O"]
mesh = SubResource("ImmediateMesh_jhjvm")
script = ExtResource("29_cafxb")

[node name="SolarSystemUI (not done)" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="SolarSystemUI (not done)"]
visible = false
layout_mode = 0
offset_right = 1277.0
offset_bottom = 649.0

[node name="SolarSystemContainer" type="Control" parent="SolarSystemUI (not done)"]
layout_mode = 1
anchor_left = 14.387
anchor_top = 7.95
anchor_right = 14.387
anchor_bottom = 7.95
offset_left = -575.48
offset_top = -318.0
offset_right = 575.52
offset_bottom = 318.0
script = ExtResource("43_qvv86")

[node name="TitleLabel" type="Label" parent="SolarSystemUI (not done)/SolarSystemContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 15.3
anchor_top = 8.552
anchor_right = 15.3
anchor_bottom = 8.552
offset_left = -53.0001
offset_top = 41.92
offset_right = 533.0
offset_bottom = 305.92

[connection signal="planet_num" from="Camera3D" to="Control/Big panel/Main Box/BoxContainer/Label2" method="_on_camera_3d_planet_num"]
[connection signal="item_selected" from="Control/Big panel/Main Box/ScrollContainer/StartPlanet" to="Control/Big panel/Main Box/StartTimeInput" method="_on_start_planet_item_selected"]
